# MuSpace

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.js
src/: App.css  App.jsx  Player.jsx  main.jsx  reset.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/core/: canvasFP.js  load.js
src/locale/: en-US.json  zh-CN.json
src/utils/: color.js  file.js  i18n.js  misc.js  storageHelper.js
src/views/: Album.jsx  Albums.jsx  Artists.jsx  Setting.jsx  Songs.jsx  UserData.jsx
