[package]
name = "music-player-new"
version = "0.5.0"
description = "A Music Player"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.7.5"
axum_static = "1.7.1"
audiotags = "0.5.0"
lofty = "0.20.0"
chrono = "0.4.38"
base64 = "0.22.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
